homepage skeleton setup

--- a/index.html
+++ b/index.html
@@ -16,10 +16,25 @@
 </head>
 
 <body>
-    <header class="container-fluid">
-
+    <header class="container-fluid bg-primary-subtle">
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid gx-5">
+              <a class="navbar-brand lead green" href="/home">Mac & Co</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                  <a class="nav-link white active" aria-current="page" href="/home">Home</a>
+                  <a class="nav-link white" href="/about">About</a>
+                  <a class="nav-link white" href="/services">Services</a>
+                  <a class="nav-link white" href="/contact">Contact</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
-    <section>
+    <section class="section">
 
     </section>
 </body>
