pages skeleton design

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,61 @@
 <head></head>
 
 <body>
-    <div class="container">Contact Page</div>
+    <div class="container">
+        <div class="z-n1">
+            <div class="row pt-5 green">
+                <div class="col-md pt-5">
+                    <h2>Visit Us</h2>
+                    <div class="mt-5">
+                        <h5>Location:</h5>
+                        <p>A108 Adam Street, Mutare, MC 535022</p>
+                    </div>
+                    <div>
+                        <h5>Email:</h5>
+                        <p>info@example.com</p>
+                    </div>
+                    <div>
+                        <h5>Call:</h5>
+                        <p>+263 77 00 0000</p>
+                    </div>
+                    <div class="socials">
+                        <div class="pt-2">
+                            <a href="" id="X(formerlytwitter)">X</a>
+                            <a href="" id="facebook">F</a>
+                            <a href="" id="instagram">I</a>
+                        </div>
+                        <div class="whatsapp pt-3">
+                            <button type="button" class="btn btn-outline-success">Let's Talk</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md pt-5">
+                    <h2>Get In Touch</h2>
+
+                    <div class="mb-3">
+                        <label for="customername" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="customername" placeholder="Your Name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="customeremail" class="form-label">Email:</label>
+                        <input type="email" class="form-control" id="customeremail" placeholder="Your Email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="messagesubject" class="form-label">Subject</label>
+                        <input type="email" class="form-control" id="messagesubject" placeholder="Subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="customermessage" class="form-label">Message</label>
+                        <textarea class="form-control" id="customermessage" rows="5"></textarea>
+                    </div>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button type="submit" class="btn btn-outline-success">Send Message</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
