--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!--Content To Be Replaced with CDN links-->
     <link href="bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
@@ -19,20 +25,22 @@
     <header class="container-fluid bg-primary-subtle">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid gx-5">
-              <a class="navbar-brand lead green" href="/home">Mac & Co</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                  <a class="nav-link white active" aria-current="page" href="/home">Home</a>
-                  <a class="nav-link white" href="/about">About</a>
-                  <a class="nav-link white" href="/services">Services</a>
-                  <a class="nav-link white" href="/contact">Contact</a>
+                <a class="navbar-brand lead green" href="/home">Mac & Co</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-link white" aria-current="page" href="/home">Home</a>
+                        <a class="nav-link white" href="/about">About</a>
+                        <a class="nav-link white" href="/services">Services</a>
+                        <a class="nav-link white" href="/contact">Contact</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <section class="section">
 
