--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,41 @@
 <head></head>
 
 <body>
-    <div class="container">About Page</div>
+    <div class="z-n1">
+        <div class="container green">
+            <div class="row pt-5">
+                <div class="col-md pt-5">
+                    <h1>Who We Are</h1>
+                    <p class="pt-3">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas
+                        atque vitae autem.
+
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.
+
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        Duis aute irure dolor in reprehenderit in voluptate velit
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col-md pt-5">
+                    <div>
+                        <h1>Mission</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div>
+                        <h1>Vision</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div>
+                        <h1>Values</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
