--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,42 @@
 <head></head>
 
 <body>
-    <div class="container">Contact Page</div>
+    <div class="page-info h-100">
+        <div class="container h-100">
+            <div class="row align-items-center justify-content-center h-100">
+                <div class="col-md-4 ms-auto">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Registrations</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                            <a href="#" class="btn btn-outline-success">Get Registered Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 ms-auto">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Advisory</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                            <a href="#" class="btn btn-outline-success mx-auto">Get Advice Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 ms-auto">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Accounting</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                            </p>
+                            <a href="#" class="btn btn-outline-success mx-auto">Let's Do Your Books</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
