--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> 
+
     <!--Content To Be Replaced with CDN links-->
-    <link href="bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <link href="vendor/bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+        <link href="vendor/fontawesome-free-6.5.1-web/css/all.min.css" rel="stylesheet">
+    <script src="vendor/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 
     <title>Mac & Co Inc</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="img/favicon.png">
     <script defer type="module" src="js/index.js"></script>
+    <script type="module" src="js/app.js"></script>
 </head>
 
 <body>
     <header class="container-fluid bg-primary-subtle">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav id="nav" class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid gx-5">
                 <a class="navbar-brand lead green" href="/home">Mac & Co</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,18 +37,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-link white" aria-current="page" href="/home">Home</a>
-                        <a class="nav-link white" href="/about">About</a>
-                        <a class="nav-link white" href="/services">Services</a>
-                        <a class="nav-link white" href="/contact">Contact</a>
+                        <a class="nav-link white text-uppercase" aria-current="page" href="/home">Home</a>
+                        <a class="nav-link white text-uppercase" href="/about">About</a>
+                        <a class="nav-link white text-uppercase" href="/services">Services</a>
+                        <a class="nav-link white text-uppercase" href="/contact">Contact</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    <section class="section">
-
-    </section>
+    <section class="section"></section>
 </body>
 
 </html>
