--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,60 +4,65 @@
 
 <body>
     <div class="container">
-        <div class="z-n1">
-            <div class="row pt-5 green">
-                <div class="col-md pt-5">
-                    <h2>Visit Us</h2>
-                    <div class="mt-5">
-                        <h5>Location:</h5>
-                        <p>A108 Adam Street, Mutare, MC 535022</p>
+
+        <div class="row pt-5">
+            <div class="col-md pt-5">
+                <h2 class="h2 green">Visit Us</h2>
+                <div class="mt-5">
+                    <h5 class="h5 green">Location:</h5>
+                    <p>A108 Adam Street, Mutare, MC 535022</p>
+                </div>
+                <div>
+                    <h5 class="h5 green">Email:</h5>
+                    <p>info@example.com</p>
+                </div>
+                <div>
+                    <h5 class="h5 green">Call:</h5>
+                    <p>+263 77 00 0000</p>
+                </div>
+                <div class="socials">
+                    <div class="pt-2">
+                        <a href="" id="X(formerlytwitter)"><i class="fa fa-twitter"></i></a>
+                        <a href="" id="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="" id="instagram"><i class="fa fa-instagram"></i></a>
                     </div>
-                    <div>
-                        <h5>Email:</h5>
-                        <p>info@example.com</p>
-                    </div>
-                    <div>
-                        <h5>Call:</h5>
-                        <p>+263 77 00 0000</p>
-                    </div>
-                    <div class="socials">
-                        <div class="pt-2">
-                            <a href="" id="X(formerlytwitter)">X</a>
-                            <a href="" id="facebook">F</a>
-                            <a href="" id="instagram">I</a>
-                        </div>
-                        <div class="whatsapp pt-3">
-                            <button type="button" class="btn btn-outline-success">Let's Talk</button>
-                        </div>
+                    <div class="whatsapp pt-3">
+                        <button type="button" class="btn btn-outline-success">Let's Talk</button>
                     </div>
                 </div>
-                <div class="col-md pt-5">
-                    <h2>Get In Touch</h2>
+            </div>
+            <div class="col-md pt-5">
+                <h2 class="h2 green">Get In Touch</h2>
 
-                    <div class="mb-3">
-                        <label for="customername" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="customername" placeholder="Your Name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="customeremail" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="customeremail" placeholder="Your Email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="messagesubject" class="form-label">Subject</label>
-                        <input type="email" class="form-control" id="messagesubject" placeholder="Subject">
-                    </div>
-                    <div class="mb-3">
-                        <label for="customermessage" class="form-label">Message</label>
-                        <textarea class="form-control" id="customermessage" rows="5"></textarea>
-                    </div>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <button type="submit" class="btn btn-outline-success">Send Message</button>
-                    </div>
-
+                <div class="mb-3">
+                    <label for="customername" class="form-label green">Name:</label>
+                    <input type="text" class="form-control" id="customername" placeholder="Your Name">
+                </div>
+                <div class="mb-3">
+                    <label for="customeremail" class="form-label green">Email:</label>
+                    <input type="email" class="form-control" id="customeremail" placeholder="Your Email">
+                </div>
+                <div class="mb-3">
+                    <label for="messagesubject" class="form-label green">Subject:</label>
+                    <input type="email" class="form-control" id="messagesubject" placeholder="Subject">
+                </div>
+                <div class="mb-3">
+                    <label for="customermessage" class="form-label green">Message:</label>
+                    <textarea class="form-control" id="customermessage" rows="5"></textarea>
+                </div>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="submit" class="btn btn-outline-success">Send Message</button>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="footer text-center fixed-bottom" style="bottom: 0%;">
+        <div class="copyright font-monospace small">
+            © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits font-monospace small">Developed by <a href="allankayz.co.zw"><img src="" alt="Allan Kayz"></a>
+        </div>
+    </footer >
 </body>
 
 </html>
