--- a/pages/home.html
+++ b/pages/home.html
@@ -16,36 +16,29 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../img/hero-bg.jpg" class="w-100" alt="..." hidden>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-caption d-md-block">
+                        <h2 class="h2">Business Advisory Services</h2>
+                        <p class="lead">"Achieve The Impossible"</p>
+                        <a href="" class="btn btn-outline-success"> Let's Do It Together</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/hero-bg.jpg" class="w-100" alt="..." hidden>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-caption d-md-block">
+                        <h2 class="h2">Business Registrations</h2>
+                        <p class="lead">"Lets Make You Legit"</p>
+                        <a href="" class="btn btn-outline-success">Get Registered</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/hero-bg.jpg" class="w-100" alt="..." hidden>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-caption d-md-block">
+                        <h2 class="h2">Accounting Services</h2>
+                        <p class="lead">"Keep Your Books Updated"</p>
+                        <a href="" class="btn btn-outline-success">Get Your Books Balanced</a>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </div>
 </body>
