--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script> 
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <!--Content To Be Replaced with CDN links-->
     <link href="vendor/bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
-        <link href="vendor/fontawesome-free-6.5.1-web/css/all.min.css" rel="stylesheet">
+    <link href="vendor/fontawesome-free-6.5.1-web/css/all.min.css" rel="stylesheet">
     <script src="vendor/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 
     <title>Mac & Co Inc</title>
