--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
                     <div class="carousel-caption d-md-block">
                         <h2 class="h2">Business Advisory Services</h2>
                         <p class="lead">"Achieve The Impossible"</p>
-                        <a href="" class="btn btn-outline-success"> Let's Do It Together</a>
+                        <a href="" class="btn btn-outline-success"><i class="fa-brands fa-whatsapp"></i> Let's Do It Together</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -27,7 +27,7 @@
                     <div class="carousel-caption d-md-block">
                         <h2 class="h2">Business Registrations</h2>
                         <p class="lead">"Lets Make You Legit"</p>
-                        <a href="" class="btn btn-outline-success">Get Registered</a>
+                        <a href="" class="btn btn-outline-success"><i class="fa-brands fa-whatsapp"></i> Get Registered</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -35,7 +35,7 @@
                     <div class="carousel-caption d-md-block">
                         <h2 class="h2">Accounting Services</h2>
                         <p class="lead">"Keep Your Books Updated"</p>
-                        <a href="" class="btn btn-outline-success">Get Your Books Balanced</a>
+                        <a href="" class="btn btn-outline-success"><i class="fa-brands fa-whatsapp"></i> Get Your Books Balanced</a>
                     </div>
                 </div>
             </div>
