--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-    <!--Content To Be Replaced with CDN links>
+    <!--Content To Be Replaced with CDN links-->
     <link href="vendor/bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
     <link href="vendor/fontawesome-free-6.5.1-web/css/all.min.css" rel="stylesheet">
-    <script src="vendor/fontawesome-free-6.5.1-web/js/all.min.js"></script-->
+    <script src="vendor/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 
     <title>Mac & Co Inc</title>
     <link rel="stylesheet" href="css/main.css">
