--- a/pages/about.html
+++ b/pages/about.html
@@ -44,7 +44,7 @@
                     <div class="copyright">
                         © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
                     </div>
-                    <div class="credits font-monospace">Developed by <a href="allankayz.co.zw"><img src=""
+                    <div class="credits font-monospace">Developed by <a href="allankayz.co.zw"><img src="../img/AKLogo.ico"
                                 style="width: 20px; height: 20px;" alt="Allan Kayz"></a></div>
                 </footer>
             </div>
