--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,20 +14,20 @@
                 </div>
                 <div>
                     <h5 class="h5 green">Email:</h5>
-                    <p>info@example.com</p>
+                    <p>info@macandco.com</p>
                 </div>
                 <div>
                     <h5 class="h5 green">Call:</h5>
-                    <p>+263 77 00 0000</p>
+                    <p>+263 78 235 2666</p>
                 </div>
                 <div class="socials">
                     <div class="pt-2">
-                        <a href="" class="px-2" id="X(formerlytwitter)"><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href="" class="px-2" id="facebook"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="" class="px-2" id="instagram"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="" class="px-2" id="X(formerlytwitter)"><i class="2x fa-brands fa-x-twitter"></i></a>
+                        <a href="" class="px-2" id="facebook"><i class="2x fa-brands fa-facebook"></i></a>
+                        <a href="" class="px-2" id="instagram"><i class="2x fa-brands fa-instagram"></i></a>
                     </div>
                     <div class="whatsapp pt-3">
-                        <button type="button" class="btn btn-outline-success">Let's Talk <i class="fa-brands fa-whatsapp"></i></button>
+                        <button type="button" class="btn btn-outline-success"><i class="fa-brands fa-whatsapp"></i> Let's Talk </button>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="customermessage" class="form-label green">Message:</label>
-                    <textarea class="form-control" id="customermessage" rows="5"></textarea>
+                    <textarea class="form-control" id="customermessage" rows="5" placeholder="Message"></textarea>
                 </div>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <button type="submit" class="btn btn-outline-success">Send Message</button>
@@ -60,9 +60,8 @@
         <div class="copyright font-monospace small">
             © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
         </div>
-        <div class="credits font-monospace small">Developed by <a href="allankayz.co.zw"><img src="" alt="Allan Kayz"></a>
+        <div class="credits font-monospace small">Developed by <a href="allankayz.co.zw"><img src="../img/AKLogo.ico"  style="width: 20px; height: 20px;" alt="Allan Kayz"></a>
         </div>
     </footer >
 </body>
-
 </html>
